<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/foot_load"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:paddingBottom="5dp"
    android:paddingTop="5dp" >

    <ProgressBar
        android:id="@+id/progress_loading_loading"
        android:layout_width="23dip"
        android:layout_height="23dip"
        android:indeterminateDrawable="@drawable/progress_indeterminte_layer"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/loading_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:gravity="center"
        android:text="@string/app_loading"
        android:textColor="@color/text_color_737373"
        android:textSize="@dimen/text_size_medium"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/caution_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:text="@string/reach_button"
        android:textColor="@color/text_color_737373"
        android:textSize="@dimen/text_size_medium"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/more_topic_Btn"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_more_topic_selector"
        android:layout_marginTop="@dimen/margin_left_right"
        android:layout_marginBottom="10dp"
        android:text="@string/more_topic"
        android:layout_gravity="center"
        android:gravity="center"
        android:clickable="true"
        android:textColor="@drawable/topic_textcolor_selector"
        android:textSize="@dimen/text_size_15"
        android:visibility="gone"/>

</LinearLayout>